website/static/css/site.css
/* ... */
.contributor-anonymous {
    font-style: italic;
}

/* Handle paginator on add contributor modal */
#addContributors .pagination-sm li a, #addContributors .pagination-sm li span {
    padding: 5px 8px;
    font-size: 10px;
}

/* Handle popovers inside modals */
.popover {
    z-index: 999999;
}

.add-contributor {
    padding: 6px 18px;
}

.contributorTitle {
    font-size:150%;
}

.selectControl {
    font-size:95%;
}

.break {
    margin-bottom:20px;
}

button.sort {
    margin-left: 6%;
}

button.cancel {
    margin-left: 5%;
}

button.save {
    padding: 6px 17px;
}

/* Modular File Renderer */
.mfr-slickgrid {
    width: 750px;
    height: 503px;
    overflow: auto;
}

.mfr-pdf-button-container {
    display: inline-block;
    vertical-align: top;
}

.mfr-pdf-button {
    height: 500px;
    width: 25px;
    display:inline-block;
    background: #F5F5F5;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    border-style:none;
    -webkit-box-shadow: none;
}

.mfr-pdf-button.active {
    background: #D0D0D0;
}

.mfr-pdf-arrow.disabled {
    /*background: white;*/
    visibility:hidden;
}

.mfr-ipynb-body {
  vertical-align: middle;
  display: block;
  max-width: 100%;
  height: auto;
}

.mfr-file > img {
    max-width:100%
}


.editable {
  cursor: pointer;
}

a {
  cursor: pointer;
}

.btn-remove-contrib {
  cursor: pointer;
}

.contributor-unregistered {
  cursor: pointer;
}

.contributor-unregistered:hover{
  background-color: #F3F3F3;
}

.collapse-button {
   color: #b0b0b0;
}

.collapse-button:hover {
    color: #505050;
}

/* Fix for pydocx bug */
div.pydocx-center{
	margin-left: 0 !important;
	margin-right: 0 !important;
}

/* jQuery UI Autocomplete (WTForms Widget) */
.ui-autocomplete-category { font-weight: bold }

.tagsinput .tag span { cursor:pointer; }

/* Badging interface CSS*/
.btn-success.editable:hover {
    background-color: #419641;
}

.badge-list {
  max-height:200px;
  overflow-y: auto;
  overflow-x: hidden;
}

.badge-list img {
  display: inline-block;
  margin-right: 10px;
  margin-bottom: 10px;
}

.profile-badge-list {
  max-height:200px;
  overflow-y: auto;
  overflow-x: hidden;
  display: inline-flex;
  padding-top: 10px;
}

.profile-badge-list div {
  margin: 5px;
}

.profile-badge-list img {
  display: inline-block;
  margin-bottom: 5px;
  cursor: pointer;
}

.profile-badge-list span {
  display: block;
}

.scripted {display: none;}

.pointer {cursor: pointer;}

#duplicateModal h4 {
    line-height: 34px;
}

.well-inline {
    padding:6px 12px;
    line-height:20px;
    font-weight:normal;
    font-size:14px;
}

.search-term-label,
.tag {
    white-space: pre;
}

.bootbox-node-deletion-modal {
    font-weight: normal;
    font-size: medium;
    line-height: normal;
    padding-top: 10px;
}

.bootbox-node-deletion-modal ol {
    padding-left: 40px;
    list-style-type: disc;
}

/* Footer slide-in */

#footerSlideIn {
    position:fixed;
    bottom:0;
    width:100%;
    padding-top:20px;
    padding-bottom:20px;
    z-index:1;
    background-color:white;
    border-top:2px solid black;
    display:none;
}

#footerSlideIn h1 {
    margin-top:0;
}

#footerSlideIn img {
    width:100%;
}

#footerSlideIn div > a {
    margin-right: 5px;
    white-space: nowrap;
}

/* Necessary to handle lots of text in tooltips */
.tooltip-inner {
    overflow: hidden;
    text-overflow: ellipsis;
}






/* Revision changes for ui - experimental, should not be in production */


/* Main Navbar */
.osf-navbar {
    background-color: #214762;
    box-shadow: 0 0 3px #AEADAD;
    min-height: 40px;
}

.osf-navbar a {
    color: #FFF;
}

.osf-navbar .nav .open>a, .osf-navbar .nav .open>a:hover, .osf-navbar .nav .open>a:focus, .osf-navbar a:hover, .osf-navbar li > a:hover, .osf-navbar li.active{
    background: rgba(187, 187, 187, 0.2);
}
.osf-navbar .navbar-nav>li>a {
    padding-top: 9px;
    padding-bottom: 6px;
    line-height: 24px;
}
.navbar-brand {
    height: 42px;
    line-height: 15px;
    }

.navbar-form {
    margin-top: 5px;
    margin-bottom: 2px;
}

.navbar-toggle {
    margin-top: 5px;
    margin-bottom: 3px;
}

.navbar-toggle .icon-bar {
    background-color: white;
}

.navbar-mid>li>a{
    padding-bottom: 8px !important;
}

.icon-lg {
    font-size: 20px;
    line-height: 26px;
}

.osf-navbar-logo {
    float: left;
    margin-right: 8px;
    margin-top: -7px;
}

.osf-gravatar > img {
    border: 1px solid #CDCDCD;
    border-radius: 13px;
    margin-right: 5px;
}


/* Project pages navigation */

.osf-project-navbar {
    position: fixed;
    width: 100%;
    left: 0;
    top: 43px;
    background: #EEE;
    z-index: 99;
    box-shadow:0 0 9px -1px #838383;
    border-radius: 0;
    border: none;
    min-height:45px;
}

.osf-project-navbar li>a {
    padding-top: 16px;
    padding-bottom: 16px;
    font-size: 16px;
}



.osf-project-navbar .navbar-nav li>a:hover {
    background-color: #DADADA;
}

.osf-project-navbar li.active, .osf-project-navbar li.active a:hover, .osf-project-navbar li:hover{
    background-color: #337AB7;
}


.osf-project-navbar li.active a {
    color: white;
}

.osf-project-navbar a.project-title {
    font-weight: 300;
    font-size: 24px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.m-v-lg {
    margin: 20px 0 20px 0;
}

.padder-lg-v {
    padding-top:20px;
    padding-bottom: 20px;
}

/* Project Dashboard */


.addon-widget-container {
    border:1px solid #ddd;
    margin-bottom: 20px;
}
.addon-widget-header {
    padding: 0 10px;
    border-bottom: 1px solid #ddd;
    background-color: #efefef;
}
.addon-widget-header .btn {
    padding-left: 7px;
    padding-right: 7px;
    margin-top: 2px;
}
.addon-widget-header h4 {
    display: inline-block;
    float: left;
    margin-bottom: 0;

}
.addon-widget-body {
    padding: 15px;
    background-color: white;
}
.addon-widget-body .list-group-item {
    border: none;
    border-bottom: 1px dotted #999;;
}
/* ... */

